--- a/index.html
+++ b/index.html
@@ -2,25 +2,33 @@
 <html lang="es">
 
 <head>
-  <title>Letalandroid</title>
-  <meta charset="utf-8" />
-  <meta property="og:title" content="Letalandroid | Home" />
-  <meta property="og:description" content="Mi blog personal" />
-  <meta property="og:type" content="Página web" />
-  <meta property="og:url" content="https://www.letalandroid.ml" />
-  <meta property="og:image" content="https://www.letalandroid.ml/src/img/yo 1-1.jpeg" />
-  <meta name="twitter:card" content="https://www.letalandroid.ml/src/img/large_img.jpg" />
-  <meta name="twitter:title" content="Letalandroid | Home" />
-  <meta name="twitter:description" content="Mi blog personal" />
-  <meta name="twitter:site" content="@letalandroid" />
-  <meta name="twitter:image" content="https://www.letalandroid.ml/src/img/yo 1-1.jpeg" />
-  <meta name="twitter:creator" content="@letalandroid" />
+  <!-- HTML Meta Tags -->
+  <title>Letalandroid | Home</title>
+  <meta name="description" content="Mi blog personal">
+  
+  <!-- Facebook Meta Tags -->
+  <meta property="og:url" content="https://www.letalandroid.ml/">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Letalandroid | Home">
+  <meta property="og:description" content="Mi blog personal">
+  <meta property="og:image" content="https://www.letalandroid.ml/src/img/yo 1-1.jpeg">
+  
+  <!-- Twitter Meta Tags -->
+  <meta name="twitter:card" content="https://www.letalandroid.ml/src/img/large_img.jpg">
+  <meta property="twitter:domain" content="letalandroid.ml">
+  <meta property="twitter:url" content="https://www.letalandroid.ml/">
+  <meta name="twitter:title" content="Letalandroid | Home">
+  <meta name="twitter:description" content="Mi blog personal">
+  <meta name="twitter:image" content="https://www.letalandroid.ml/src/img/yo 1-1.jpeg">
+  
   <link rel="stylesheet" href="css/styles.css" />
   <link rel="shortcut icon" href="src/img/logo.ico" type="image/x-icon">
+
   <!--Fuente para el párrafo!-->
   <link rel="preconnect" href="https://fonts.gstatic.com" />
   <link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans&display=swap" rel="stylesheet" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  
 </head>
 
 <body id="inicio">
