--- a/index.html
+++ b/index.html
@@ -1,79 +1,97 @@
 <!DOCTYPE html>
 <html lang="es">
+  <head>
+    <!-- HTML Meta Tags -->
+    <title>Letalandroid | Home</title>
+    <meta name="description" content="Mi blog personal" />
 
-<head>
-  <!-- HTML Meta Tags -->
-  <title>Letalandroid | Home</title>
-  <meta name="description" content="Mi blog personal">
-  
-  <!-- Facebook Meta Tags -->
-  <meta property="og:url" content="https://www.letalandroid.ml/">
-  <meta property="og:type" content="website">
-  <meta property="og:title" content="Letalandroid | Home">
-  <meta property="og:description" content="Mi blog personal">
-  <meta property="og:image" content="https://www.letalandroid.ml/src/img/yo 1-1.jpeg">
-  
-  <!-- Twitter Meta Tags -->
-  <meta name="twitter:card" content="https://www.letalandroid.ml/src/img/large_img.jpg">
-  <meta property="twitter:domain" content="letalandroid.ml">
-  <meta property="twitter:url" content="https://www.letalandroid.ml/">
-  <meta name="twitter:title" content="Letalandroid | Home">
-  <meta name="twitter:description" content="Mi blog personal">
-  <meta name="twitter:image" content="https://www.letalandroid.ml/src/img/yo 1-1.jpeg">
-  
-  <link rel="stylesheet" href="css/styles.css" />
-  <link rel="shortcut icon" href="src/img/logo.ico" type="image/x-icon">
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://www.letalandroid.ml/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Letalandroid | Home" />
+    <meta property="og:description" content="Mi blog personal" />
+    <meta
+      property="og:image"
+      content="https://www.letalandroid.ml/src/img/yo 1-1.jpeg"
+    />
 
-  <!--Fuente para el párrafo!-->
-  <link rel="preconnect" href="https://fonts.gstatic.com" />
-  <link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans&display=swap" rel="stylesheet" />
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  
-</head>
+    <!-- Twitter Meta Tags -->
+    <meta
+      name="twitter:card"
+      content="https://www.letalandroid.ml/src/img/large_img.jpg"
+    />
+    <meta property="twitter:domain" content="letalandroid.ml" />
+    <meta property="twitter:url" content="https://www.letalandroid.ml/" />
+    <meta name="twitter:title" content="Letalandroid | Home" />
+    <meta name="twitter:description" content="Mi blog personal" />
+    <meta
+      name="twitter:image"
+      content="https://www.letalandroid.ml/src/img/yo 1-1.jpeg"
+    />
 
-<body id="inicio">
-  <header>
-    <div class="header-h">
-      <h1>Me llamo Carlos y soy</h1>
-      <h2>Desarrollador Front-End</h2>
-      <a class="btn" href="#redes">
-        <input class="contact" type="button" value="Contáctame">
-      </a>
-    </div>
-    <div class="yo-container">
-      <img class="yo" src="src/img/yo 1-1.jpeg" alt="yo">
-    </div>
-  </header>
-  <main>
-    <section class="description">
-      <p class="p">
-        Me llamo Carlos, tengo 17, estudiante de la Universidad César Vallejo, y estoy empezando con el Desarrollo Web.
-        Actualmente estudiando en un curso de JavaScript y vivo en Perú 🇵🇪
-      </p>
-    </section>
-    <section class="tecnologies">
-      <h2>Teconologías que domino:</h2>
-      <div class="tecno-logos">
-        <img src="src/img/logos/html.png" alt="html" title="HTML">
-        <img src="src/img/logos/css.png" alt="css" title="CSS">
-        <img src="src/img/logos/git.png" alt="git" title="GIT">
+    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="shortcut icon" href="src/img/logo.ico" type="image/x-icon" />
+
+    <!--Fuente para el párrafo!-->
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans&display=swap"
+      rel="stylesheet"
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+  </head>
+
+  <body id="inicio">
+    <header>
+      <div class="header-h">
+        <h1>Me llamo Carlos y soy</h1>
+        <h2>Desarrollador Front-End</h2>
+        <a class="btn" href="#redes">
+          <input class="contact" type="button" value="Contáctame" />
+        </a>
       </div>
-    </section>
-  </main>
-  <footer id="redes">
-    <h3>Letalandroid</h3>
-    <div class="redes">
-      <a href="https://github.com/Letalandroid" target="_blank">
-        <img class="redes-logo" src="src/img/logos/github.png" alt="github">
-      </a>
-      <a href="https://www.linkedin.com/in/letalandroid/" target="_blank">
-        <img class="redes-logo linkedin" src="src/img/logos/linkedin.png" alt="linkedin">
-      </a>
-      <a href="https://twitter.com/letalandroid" target="_blank">
-        <img class="redes-logo" src="src/img/logos/twitter.png" alt="twitter">
-      </a>
-    </div>
-  </footer>
-</body>
-
+      <div class="yo-container">
+        <img class="yo" src="src/img/yo 1-1.jpeg" alt="yo" />
+      </div>
+    </header>
+    <main>
+      <section class="description">
+        <p class="p">
+          Me llamo Carlos, tengo 17, estudiante de la Universidad César Vallejo,
+          y estoy empezando con el Desarrollo Web. Actualmente estudiando en un
+          curso de JavaScript y vivo en Perú 🇵🇪
+        </p>
+      </section>
+      <section class="tecnologies">
+        <h2>Teconologías que domino:</h2>
+        <div class="tecno-logos">
+          <img src="src/img/logos/html.png" alt="html" title="HTML" />
+          <img src="src/img/logos/css.png" alt="css" title="CSS" />
+          <img src="src/img/logos/git.png" alt="git" title="GIT" />
+        </div>
+      </section>
+    </main>
+    <footer id="redes">
+      <h3>Letalandroid</h3>
+      <div class="redes">
+        <a href="https://github.com/Letalandroid" target="_blank">
+          <img class="redes-logo" src="src/img/logos/github.png" alt="github" />
+        </a>
+        <a href="https://www.linkedin.com/in/letalandroid/" target="_blank">
+          <img
+            class="redes-logo linkedin"
+            src="src/img/logos/linkedin.png"
+            alt="linkedin"
+          />
+        </a>
+        <a href="https://twitter.com/letalandroid" target="_blank">
+          <img
+            class="redes-logo"
+            src="src/img/logos/twitter.png"
+            alt="twitter"
+          />
+        </a>
+      </div>
+    </footer>
+  </body>
 </html>
