--- a/index.html
+++ b/index.html
@@ -42,19 +42,20 @@
   </head>
 
   <body id="inicio">
-    <header>
-      <div class="header-h">
-        <h1>Me llamo Carlos y soy</h1>
-        <h2>Desarrollador Front-End</h2>
-        <a class="btn" href="#redes">
-          <input class="contact" type="button" value="Contáctame" />
-        </a>
-      </div>
-      <div class="yo-container">
-        <img class="yo" src="src/img/yo 1-1.jpeg" alt="yo" />
-      </div>
-    </header>
+    <header></header>
     <main>
+      <div class="portada-container">
+        <div class="portada">
+          <h1>Me llamo Carlos y soy</h1>
+          <h2>Desarrollador Front-End</h2>
+          <a class="btn" href="#redes">
+            <input class="contact" type="button" value="Contáctame" />
+          </a>
+        </div>
+        <div class="yo-container">
+          <img class="yo" src="src/img/yo 1-1.jpeg" alt="yo" />
+        </div>
+      </div>
       <section class="description">
         <p class="p">
           Me llamo Carlos, tengo 17, estudiante de la Universidad César Vallejo,
