--- a/index.html
+++ b/index.html
@@ -42,7 +42,16 @@
   </head>
 
   <body id="inicio">
-    <header></header>
+    <header>
+      <nav>
+        <ul>
+          <li><a href="#">Historia</a></li>
+          <li><a href="#">Tecnologías</a></li>
+          <li><a href="#">Proyectos</a></li>
+          <li><a href="#">Contáctame</a></li>
+        </ul>
+      </nav>
+    </header>
     <main>
       <div class="portada-container">
         <div class="portada">
