--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta property="og:description" content="Mi blog personal" />
     <meta
       property="og:image"
-      content="https://www.letalandroid.ml/src/img/yo 1-1.jpeg"
+      content="https://www.letalandroid.ml/src/img/yo1-1.jpeg"
     />
 
     <!-- Twitter Meta Tags -->
@@ -43,6 +43,7 @@
       src="https://kit.fontawesome.com/8b1c082df7.js"
       crossorigin="anonymous"
     ></script>
+
   </head>
 
   <body id="inicio">
@@ -50,7 +51,7 @@
       <nav>
         <li class="nav-menu">
           <a id="menu" href="#"><em class="fas fa-bars"></em></a>
-          <input type="checkbox" id="menu-check">
+          <input type="checkbox" id="menu-check" />
         </li>
         <ul id="nav">
           <li><a href="#inicio">Inicio</a></li>
@@ -70,7 +71,7 @@
           </a>
         </div>
         <div class="yo-container">
-          <img class="yo" src="src/img/yo 1-1.jpeg" alt="yo" />
+          <img class="yo" src="src/img/yo1-1.jpeg" alt="yo" />
         </div>
       </div>
       <section class="description">
@@ -88,6 +89,9 @@
           <img src="src/img/logos/git.png" alt="git" title="GIT" />
         </div>
       </section>
+      <!-- <section id="proyectos" class="proyects">
+        <h2>Proyectos realizados:</h2>
+      </section> -->
     </main>
     <footer id="redes">
       <h3>Letalandroid</h3>
