--- a/index.html
+++ b/index.html
@@ -43,7 +43,6 @@
       src="https://kit.fontawesome.com/8b1c082df7.js"
       crossorigin="anonymous"
     ></script>
-
   </head>
 
   <body id="inicio">
@@ -89,9 +88,32 @@
           <img src="src/img/logos/git.png" alt="git" title="GIT" />
         </div>
       </section>
-      <!-- <section id="proyectos" class="proyects">
+      <section id="proyectos" class="proyects-container">
         <h2>Proyectos realizados:</h2>
-      </section> -->
+        <div class="proyects">
+          <div class="proyect">
+            <img src="src/img/proyectos/proyecto1.png" alt="proyecto1" />
+            <h3>Portafolio</h3>
+            <p>Proyecto realizado con HTML, CSS y JavaScript</p>
+            <div class="links">
+              <a
+                href="https://www.letalandroid.ml"
+                class="btn-site"
+                target="_blank"
+              >
+                <input type="button" value="Ver sitio" />
+              </a>
+              <a
+                href="https://github.com/Letalandroid/letalandroid.github.io"
+                class="btn-repo"
+                target="_blank"
+              >
+                <input type="button" value="Ver repo" />
+              </a>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <footer id="redes">
       <h3>Letalandroid</h3>
