--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
           <div class="proyect">
             <img src="src/img/proyectos/proyecto1.png" alt="proyecto1" />
             <h3>Portafolio</h3>
-            <p>Proyecto realizado con HTML, CSS y JavaScript</p>
+            <p>Proyecto realizado con HTML, CSS y JavaScript.</p>
             <div class="links">
               <a
                 href="https://www.letalandroid.ml"
@@ -105,6 +105,90 @@
               </a>
               <a
                 href="https://github.com/Letalandroid/letalandroid.github.io"
+                class="btn-repo"
+                target="_blank"
+              >
+                <input type="button" value="Ver repo" />
+              </a>
+            </div>
+          </div>
+          <div class="proyect">
+            <img src="src/img/proyectos/proyecto2.png" alt="proyecto2" />
+            <h3>Red-S</h3>
+            <p>Bloque de comentarios públicos creado con MongoDB, Express y Node JS.</p>
+            <div class="links">
+              <a
+                href="https://red-s.vercel.app"
+                class="btn-site"
+                target="_blank"
+              >
+                <input type="button" value="Ver sitio" />
+              </a>
+              <a
+                href="https://github.com/Letalandroid/red-s"
+                class="btn-repo"
+                target="_blank"
+              >
+                <input type="button" value="Ver repo" />
+              </a>
+            </div>
+          </div>
+          <div class="proyect">
+            <img src="src/img/proyectos/proyecto3.png" alt="proyecto3" />
+            <h3>Inith-With-Express</h3>
+            <p>App de contactos actualmente de servicio de una sola cuenta lo cuál será actualizado para que en cada cuenta tenga ciertos contactos creados por los usuarios.</p>
+            <div class="links">
+              <a
+                href="https://init-with-express.vercel.app/"
+                class="btn-site"
+                target="_blank"
+              >
+                <input type="button" value="Ver sitio" />
+              </a>
+              <a
+                href="https://github.com/Letalandroid/init-with-express"
+                class="btn-repo"
+                target="_blank"
+              >
+                <input type="button" value="Ver repo" />
+              </a>
+            </div>
+          </div>
+          <div class="proyect">
+            <img src="src/img/proyectos/proyecto4.png" alt="proyecto4" />
+            <h3>Movies App</h3>
+            <p>Una aplicación de recomendación de películas hecha en React JS.</p>
+            <div class="links">
+              <a
+                href="https://movies-app-sigma-one.vercel.app/"
+                class="btn-site"
+                target="_blank"
+              >
+                <input type="button" value="Ver sitio" />
+              </a>
+              <a
+                href="https://github.com/Letalandroid/movies-app"
+                class="btn-repo"
+                target="_blank"
+              >
+                <input type="button" value="Ver repo" />
+              </a>
+            </div>
+          </div>
+          <div class="proyect">
+            <img src="src/img/proyectos/proyecto5.png" alt="proyecto5" />
+            <h3>Weather</h3>
+            <p>Una app de clima que gracias a la api de OpenWeatherMap se pudo lograr.</p>
+            <div class="links">
+              <a
+                href="https://www.letalandroid.ml/weather/"
+                class="btn-site"
+                target="_blank"
+              >
+                <input type="button" value="Ver sitio" />
+              </a>
+              <a
+                href="https://github.com/Letalandroid/weather"
                 class="btn-repo"
                 target="_blank"
               >
