--- a/index.html
+++ b/index.html
@@ -85,6 +85,12 @@
         <div class="tecno-logos">
           <img src="src/img/logos/html.png" alt="html" title="HTML" />
           <img src="src/img/logos/css.png" alt="css" title="CSS" />
+          <img src="src/img/logos/js.png" alt="git" title="JS" />
+          <img src="src/img/logos/boostrap.png" alt="git" title="BOOSTRAP" />
+          <img src="src/img/logos/sass.png" alt="git" title="SASS" />
+          <img src="src/img/logos/react.png" alt="git" title="REACT" />
+          <img src="src/img/logos/node-js.png" alt="git" title="NODE-JS" />
+          <img src="src/img/logos/mongodb.png" alt="git" title="MONGODB" />
           <img src="src/img/logos/git.png" alt="git" title="GIT" />
         </div>
       </section>
