--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       </div>
       <section class="description">
         <p class="p">
-          Me llamo Carlos, tengo 17, estudiante de la Universidad César Vallejo,
+          Me llamo Carlos, tengo 18, estudiante de la Universidad César Vallejo,
           y estoy empezando con el Desarrollo Web. Actualmente estudiando en un
           curso de JavaScript y vivo en Perú 🇵🇪
         </p>
@@ -195,6 +195,27 @@
               </a>
               <a
                 href="https://github.com/Letalandroid/weather"
+                class="btn-repo"
+                target="_blank"
+              >
+                <input type="button" value="Ver repo" />
+              </a>
+            </div>
+          </div>
+          <div class="proyect">
+            <img src="src/img/proyectos/proyecto6.png" alt="proyecto3" />
+            <h3>Upload-Your-Image</h3>
+            <p>Un sitio donde puedes subir cualquier tipo de imagen.</p>
+            <div class="links">
+              <a
+                href="https://upload-your-image.vercel.app/"
+                class="btn-site"
+                target="_blank"
+              >
+                <input type="button" value="Ver sitio" />
+              </a>
+              <a
+                href="https://github.com/Letalandroid/upload-your-image"
                 class="btn-repo"
                 target="_blank"
               >
